rename to avoid namespace collision

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = cardboard
+name = card_board
 version = 0.1.0
 license = Apache 2.0
 description = Reads and grades collectible trading cards
