--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = card_board
 version = 0.1.0
 license = Apache 2.0
 description = Reads and grades collectible trading cards
-long_description = file: README.md
+long_description = file: README.rst
 author = Jared Crawford
 author_email = jmcrawford45@gmail.com
 classifiers=
@@ -22,10 +22,7 @@ package_dir =
     =src
 include_package_data = True
 install_requires =
-   <requirement 1>
-   <requirement 2>
-   <...>
-   <requirement n>
+   scikit-learn
 
 [options.packages.find]
 where=src
