--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,4 @@ deps =
    pytest-cov
    pytest-randomly
 commands =
-    pytest --cov=card_board --randomly-seed=1 --pdb
+    pytest --cov=card_board --randomly-seed=1
