--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,4 @@ jobs:
         # Run tox using the version of Python in `PATH`
         run: tox -e py
       - name: Coveralls
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          coveralls
+        uses: AndreMiras/coveralls-python-action@develop
