--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,9 @@ package_dir =
     =src
 include_package_data = True
 install_requires =
-   scikit-learn
+   opencv-python
+   pytesseract
+   pillow
 
 [options.packages.find]
 where=src
