--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
    pytest-cov
    pytest-randomly
 commands =
-    pytest --cov=card_board --randomly-seed=1
+    pytest --cov=card_board --randomly-seed=1 --pdb
 
 [coverage:run]
 relative_files = True
